@@ -106,12 +106,7 @@ server {
 # See http://search.cpan.org/~bloonix/Log-Handler/
 
 database {
-    driver PostgreSQL
-    host 127.0.0.1
-    port 5432
-    database bloonix
-    user bloonix
-    password bloonix
+    include /etc/bloonix/database/main.conf
 
     logger {
         file {
